TODO
* fix logic of definition of WINAPI CRT stat exists function
* add file stream support
  - what about non-CRT WINAPI version ?
  - implement libcfile_stream_open_wide
* validate WINAPI versions of fallback functions
* add fallback versions of
  - CreateFileA
  - CreateFileW
  - CloseHandle
  - ReadFile
  - WriteFile
  - GetFileAttributesA
  - GetFileAttributesW
  - GetLastError
* add libcfile_codepage.h and codepage functions
* improve tests ?
  - add write when opened with read ?
  - add IO control tests ?
  - add test to retrieve size from device ?
* what about disk full on write errno = ENOSPC

Notes:
* WINAPI ReadFile
  When the file is UNBUFFERED it appears that nNumberOfBytesToRead must be a
  multiple of sector size. Any other value will result in error 0x57
  (ERROR_INVALID_PARAMETER).

20130329
* worked on IO control read function

20130328
* worked on IO control read function
* changed close to ignore a file that is already closed
* added libcnotify

20130327
* added file open, read and write _with_error_code functions
* improved size detection for device files
* added IO control read function

20130210
* added FILE_SHARE_WRITE to open read CreateFile calls

20130113
* updated msvscpp files

20130103
* changes to .gitignore
* 2013 update

20121225
* added .gitignore
* added msvscpp files

20121103
* code clean up
* bug fixes in error handling

20120919
* applied updates

20120905
* change for WINAPI

20120904
* applied updates

20120903
* change for WINAPI

20120825
* applied updates

20120630
* applied updates

20120624
* fixed typo in error output

20120610
* Changes for WINAPI

20120526
* added tests for stream
* updated man page
* added file stream get size function

20120524
* worked on file stream support
* code clean up

20120523
* worked on file stream support

20120507
* email and project site change

20120425
* fixes for pkg-config detection of libraries

20120409
* updated dependencies

20120408
* updated dependencies

20120407