@@ -47,26 +47,29 @@
  * bit 3	set to 1 to truncate an existing file on write
  * bit 4-8	not used
  */
-#define LIBCFILE_ACCESS_FLAG_READ			0x01
-#define LIBCFILE_ACCESS_FLAG_WRITE			0x02
-#define LIBCFILE_ACCESS_FLAG_TRUNCATE			0x04
+enum LIBCFILE_ACCESS_FLAGS
+{
+	LIBCFILE_ACCESS_FLAG_READ			= 0x01,
+	LIBCFILE_ACCESS_FLAG_WRITE			= 0x02,
+	LIBCFILE_ACCESS_FLAG_TRUNCATE			= 0x04
+};
 
 /* The file access macros
  */
-#define LIBCFILE_OPEN_READ \
-	( LIBCFILE_ACCESS_FLAG_READ )
+#define LIBCFILE_OPEN_READ				( LIBCFILE_ACCESS_FLAG_READ )
+#define LIBCFILE_OPEN_WRITE				( LIBCFILE_ACCESS_FLAG_WRITE )
+#define LIBCFILE_OPEN_READ_WRITE			( LIBCFILE_ACCESS_FLAG_READ | LIBCFILE_ACCESS_FLAG_WRITE )
+#define LIBCFILE_OPEN_WRITE_TRUNCATE			( LIBCFILE_ACCESS_FLAG_WRITE | LIBCFILE_ACCESS_FLAG_TRUNCATE )
+#define LIBCFILE_OPEN_READ_WRITE_TRUNCATE		( LIBCFILE_ACCESS_FLAG_READ | LIBCFILE_ACCESS_FLAG_WRITE | LIBCFILE_ACCESS_FLAG_TRUNCATE )
 
-#define LIBCFILE_OPEN_WRITE \
-	( LIBCFILE_ACCESS_FLAG_WRITE )
-
-#define LIBCFILE_OPEN_READ_WRITE \
-	( LIBCFILE_ACCESS_FLAG_READ | LIBCFILE_ACCESS_FLAG_WRITE )
-
-#define LIBCFILE_OPEN_WRITE_TRUNCATE \
-	( LIBCFILE_ACCESS_FLAG_WRITE | LIBCFILE_ACCESS_FLAG_TRUNCATE )
-
-#define LIBCFILE_OPEN_READ_WRITE_TRUNCATE \
-	( LIBCFILE_ACCESS_FLAG_READ | LIBCFILE_ACCESS_FLAG_WRITE | LIBCFILE_ACCESS_FLAG_TRUNCATE )
+/* The access behavior types
+ */
+enum LIBCFILE_ACCESS_BEHAVIOR
+{
+	LIBCFILE_ACCESS_BEHAVIOR_NORMAL,
+	LIBCFILE_ACCESS_BEHAVIOR_RANDOM,
+	LIBCFILE_ACCESS_BEHAVIOR_SEQUENTIAL
+};
 
 #endif /* !defined( HAVE_LOCAL_LIBCFILE ) */
 
