@@ -68,6 +68,8 @@ File functions
 .Ft libcfile_file_io_control_read "libcfile_file_t *file, uint32_t control_code, uint8_t *control_data, size_t control_data_size, uint8_t *data, size_t data_size, libcfile_error_t **error"
 .Ft int
 .Ft libcfile_file_io_control_read_with_error_code "libcfile_file_t *file, uint32_t control_code, uint8_t *control_data, size_t control_data_size, uint8_t *data, size_t data_size, uint32_t *error_code, libcfile_error_t **error"
+.Ft int
+.Fn libcfile_file_set_access_behavior "libcfile_file_t *file, int access_behavior, libcfile_error_t **error"
 .Pp
 Available when compiled with wide character string support:
 .Ft int
